tests/expectations/compiler/group/no_space_between_literal.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370004]: Unexpected white space between terms 1 and group
    --> compiler-test:5:23
     |
   5 |       let g: group = 1 group;
     |                       ^"""]
